# Matrix-Multiplication-OpenMP

./: CMakeLists.txt  hello_job.sh  main  main.c  main.cpp
